--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ a {
     color: #fff;
 }
 
+.clear-fix {
+    clear: both;
+}
+
 .hidden {
     display: none;
 }
@@ -205,6 +209,11 @@ nav {
 
 /* slider */
 
+.slide-cards__img {
+    width: 331px;
+    height: 181px;
+}
+
 .slide-cards__btns {
     display: flex;
     position: absolute;
@@ -343,6 +352,20 @@ footer {
     background-color: rgba(0,0,0,0.4);
 }
 
+.wall {
+    display: block;
+    position: fixed;
+    z-index: 1000;
+    padding-top: 25vh;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
 .modal-content {
     position: relative;
     margin: auto;
@@ -391,6 +414,25 @@ footer {
     -moz-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
     box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
   }
+
+.wall__textarea {
+    margin-bottom: 25px;
+    padding: 10px;
+    width: 100%;
+    height: auto;
+}
+
+.form__wall {
+    margin: 0 auto;
+    width: 600px;
+    padding: 0 32px 32px 32px;
+    border: 1px solid #e0e0e0;
+    background: #ffffff;
+    border-radius: 7px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+}
   
   .form__title {
     text-align: center;
@@ -441,6 +483,7 @@ footer {
     margin-right: 10px;
   }
 
+  .log-error,
   .error {
       padding: 15px 0;
       color: #000;
@@ -861,7 +904,7 @@ table {
 }
   
   /* user-settings */
-.open-janr-settings.
+.open-janr-settings,
 .user-settings__age,
 .user-settings__sex {
     background: rgb(241, 241, 241);
@@ -993,6 +1036,10 @@ input:-moz-placeholder {
     margin-bottom: 10px;
 }
 
-.clear-fix {
-    clear: both;
+.user-info__item-left {
+    margin-right: 25px;
+}
+
+.user-info__item {
+    display: flex;
 }
